sapiens - z-index fix header

--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -1,5 +1,6 @@
 .header {
 	position: fixed;
+	z-index: 1;
 	width: 100%;
 	@include transition();
 	&--hidden {
